--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -9,7 +9,7 @@ jobs:
   build-dev-website:
     runs-on: ubuntu-latest
     env:
-      S3_BUCKET: seytech-static-website-dev
+      S3_BUCKET: test1githubactions
     steps:
       - name: Checkout
         uses: actions/checkout@v3
